--- a/code_fix.html
+++ b/code_fix.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>This is the Title</title>
@@ -9,13 +9,14 @@
     <div>
         <h1>This is the Heading 1</h1>
         <h2>This is the Heading 2</h2>
+            <b>I am a bold student of The Tech Academy</b>
         <h3>Have you seen The Tech Academy's Student Orientation video?</h3>
     </div>
         <div>
             <a href="https://www.learncodinganywhere.com">This is The Tech Academy's website.</a>
         </div>
             <div class="photo">
-                <img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png" alt="The Tech Academy Logo" width=(600px); height=(300px)>
+                <img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png" alt="The Tech Academy Logo" width="600px"; height="300px">
             </div>
                 <div>
                     <iframe width="560" height="315"
