--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang"en">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>Skateboards</title>
-		<link rel="stylesheet" href="./CSS/one_page_website.css"
+		<link rel="stylesheet" href="./CSS/one_page_website.css">
 	</head>
 	<body>
 		<!-- NAV -->
