--- a/solarsystem.html
+++ b/solarsystem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
     <head>
-        <meta charset="utf-8"
+        <meta charset="utf-8">
         <title>The Space Station | Resort</title>
         <link rel="stylesheet" href="./CSS/shared.css">
         <link rel="stylesheet" href="./CSS/animations.css"> 
