--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -2,8 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Skateboards</title>
 		<link rel="stylesheet" href="./CSS/one_page_website.css">
+		<script src="JS/website.js"></script>
 	</head>
 	<body>
 		<!-- NAV -->
@@ -30,25 +32,69 @@
 		<!-- END HOME -->
 		
 		<!-- GALLERY -->
-		<section id="gallery">
-			<div>
-				<h1>GALLERY</h1>
-				<div>
-				
-					<!-- PHOTO CONTAINER 1 -->
-					<div>
-						<div>
-							<img src="" alt="">
-							<div>
-								<h3>Click to Enlarge</h3>
-								<p>We have many differnet brands of skateboards!</p>
-							</div>
-						</div>
-					</div>
-					<!-- END CONTAINER 1 -->
-				</div>
+		<h2 style="text-align:center">Lightbox</h2>
+
+		<div class="row">
+		  <div class="column">
+			<img src="Images/Skateboard_1.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+		  </div>
+		  <div class="column">
+			<img src="Images/Skateboard_2.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+		  </div>
+		  <div class="column">
+			<img src="Images/Skateboard_3.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+		  </div>
+		  <div class="column">
+			<img src="Images/Skateboard_4.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+		  </div>
+		</div>
+		
+		<div id="myModal" class="modal">
+		  <span class="close cursor" onclick="closeModal()">&times;</span>
+		  <div class="modal-content">
+		
+			<div class="mySlides">
+			  <div class="numbertext">1 / 4</div>
+			  <img src="Images/Skateboard_1.jpg" style="width:50%">
 			</div>
-		</section>
+		
+			<div class="mySlides">
+			  <div class="numbertext">2 / 4</div>
+			  <img src="Images/Skateboard_2.jpg" style="width:50%">
+			</div>
+		
+			<div class="mySlides">
+			  <div class="numbertext">3 / 4</div>
+			  <img src="Images/Skateboard_3.jpg" style="width:60%">
+			</div>
+			
+			<div class="mySlides">
+			  <div class="numbertext">4 / 4</div>
+			  <img src="Images/Skateboard_4.jpg" style="width:30%">
+			</div>
+			
+			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+			<a class="next" onclick="plusSlides(1)">&#10095;</a>
+		
+			<div class="caption-container">
+			  <p id="caption"></p>
+			</div>
+		
+		
+			<div class="column">
+			  <img class="demo cursor" src="Images/Skateboard_1.jpg" style="width:40%" onclick="currentSlide(1)" alt="Girl Skateboard">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="Images/Skateboard_2.jpg" style="width:40%" onclick="currentSlide(2)" alt="Blind Skateboard">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="Images/Skateboard_3.jpg" style="width:40%" onclick="currentSlide(3)" alt="DGK Skateboard">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="Images/Skateboard_4.jpg" style="width:40%" onclick="currentSlide(4)" alt="Element Skateboard">
+			</div>
+		  </div>
+		</div>
 		<!-- END GALLERY -->
 		
 		<!-- VIDEOS -->
